@@ -3,6 +3,8 @@ Revision history for PostScript-Report
 0.06   NOT
 	- Added the metrics attribute to Font
 	- Added the LinkField component
+	- Fixed Image to round calculated dimensions to nearest point
+	  (A Component's height & width must be integers.)
 
 0.05   February 26, 2010
 	- Use PostScript::File::Metrics (requires PostScript::File 2.00)
